python_modules/dagster/dagster/_core/definitions/antlr_asset_selection/generated/AssetSelectionParser.py
# flake8: noqa
# type: ignore
# flake8: noqa
# type: ignore
# Generated from AssetSelection.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO




class AssetSelectionParser(Parser):
    grammarFileName = "AssetSelection.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'='",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'*'",
        "'+'",
        "<INVALID>",
        "':'",
        "'('",
        "')'",
        "','",
        "'key'",
        "'owner'",
        "'group'",
        "'tag'",
        "'kind'",
        "'code_location'",
        "'status'",
        "'column'",
        "'table_name'",
        "'column_tag'",
        "'changed_in_branch'",
        "'partitions'",
        "'automation_type'",
        "'sinks'",
        "'roots'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'<null>'",
    ]

    symbolicNames = [
        "<INVALID>",
        "EQUAL",
        "AND",
        "OR",
        "NOT",
        "STAR",
        "PLUS",
        "DIGITS",
        "COLON",
        "LPAREN",
        "RPAREN",
        "COMMA",
        "KEY",
        "OWNER",
        "GROUP",
        "TAG",
        "KIND",
        "CODE_LOCATION",
        "STATUS",
        "COLUMN",
        "TABLE_NAME",
        "COLUMN_TAG",
        "CHANGED_IN_BRANCH",
        "PARTITIONS",
        "AUTOMATION_TYPE",
        "SINKS",
        "ROOTS",
        "QUOTED_STRING",
        "UNQUOTED_STRING",
        "UNQUOTED_WILDCARD_STRING",
        "NULL_STRING",
        "WS",
    ]

    RULE_start = 0
    RULE_expr = 1
    RULE_traversalAllowedExpr = 2
    RULE_upTraversal = 3
    RULE_downTraversal = 4
    RULE_functionName = 5
    RULE_attributeExpr = 6
    RULE_value = 7
    RULE_keyValue = 8

    ruleNames = [
        "start",
        "expr",
        "traversalAllowedExpr",
        "upTraversal",
        "downTraversal",
        "functionName",
        "attributeExpr",
        "value",
        "keyValue",
    ]

    EOF = Token.EOF
    EQUAL = 1
    AND = 2
    OR = 3
    NOT = 4
    STAR = 5
    PLUS = 6
    DIGITS = 7
    COLON = 8
    LPAREN = 9
    RPAREN = 10
    COMMA = 11
    KEY = 12
    OWNER = 13
    GROUP = 14
    TAG = 15
    KIND = 16
    CODE_LOCATION = 17
    STATUS = 18
    COLUMN = 19
    TABLE_NAME = 20
    COLUMN_TAG = 21
    CHANGED_IN_BRANCH = 22
    PARTITIONS = 23
    AUTOMATION_TYPE = 24
    SINKS = 25
    ROOTS = 26
    QUOTED_STRING = 27
    UNQUOTED_STRING = 28
    UNQUOTED_WILDCARD_STRING = 29
    NULL_STRING = 30
    WS = 31

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class StartContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def EOF(self):
            return self.getToken(AssetSelectionParser.EOF, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_start

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStart"):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)

    def start(self):

        localctx = AssetSelectionParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.expr(0)
            self.state = 19
            self.match(AssetSelectionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_expr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class UpTraversalExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def upTraversal(self):
            return self.getTypedRuleContext(AssetSelectionParser.UpTraversalContext, 0)

        def traversalAllowedExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.TraversalAllowedExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUpTraversalExpression"):
                listener.enterUpTraversalExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUpTraversalExpression"):
                listener.exitUpTraversalExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUpTraversalExpression"):
                return visitor.visitUpTraversalExpression(self)
            else:
                return visitor.visitChildren(self)

    class AndExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ExprContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ExprContext, i)

        def AND(self):
            return self.getToken(AssetSelectionParser.AND, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAndExpression"):
                listener.enterAndExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAndExpression"):
                listener.exitAndExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAndExpression"):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)

    class AllExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STAR(self):
            return self.getToken(AssetSelectionParser.STAR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAllExpression"):
                listener.enterAllExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAllExpression"):
                listener.exitAllExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAllExpression"):
                return visitor.visitAllExpression(self)
            else:
                return visitor.visitChildren(self)

    class TraversalAllowedExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def traversalAllowedExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.TraversalAllowedExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTraversalAllowedExpression"):
                listener.enterTraversalAllowedExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTraversalAllowedExpression"):
                listener.exitTraversalAllowedExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTraversalAllowedExpression"):
                return visitor.visitTraversalAllowedExpression(self)
            else:
                return visitor.visitChildren(self)

    class DownTraversalExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def traversalAllowedExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.TraversalAllowedExprContext, 0)

        def downTraversal(self):
            return self.getTypedRuleContext(AssetSelectionParser.DownTraversalContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDownTraversalExpression"):
                listener.enterDownTraversalExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDownTraversalExpression"):
                listener.exitDownTraversalExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDownTraversalExpression"):
                return visitor.visitDownTraversalExpression(self)
            else:
                return visitor.visitChildren(self)

    class NotExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(AssetSelectionParser.NOT, 0)

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNotExpression"):
                listener.enterNotExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNotExpression"):
                listener.exitNotExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNotExpression"):
                return visitor.visitNotExpression(self)
            else:
                return visitor.visitChildren(self)

    class OrExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ExprContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ExprContext, i)

        def OR(self):
            return self.getToken(AssetSelectionParser.OR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrExpression"):
                listener.enterOrExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrExpression"):
                listener.exitOrExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrExpression"):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)

    class UpAndDownTraversalExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def upTraversal(self):
            return self.getTypedRuleContext(AssetSelectionParser.UpTraversalContext, 0)

        def traversalAllowedExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.TraversalAllowedExprContext, 0)

        def downTraversal(self):
            return self.getTypedRuleContext(AssetSelectionParser.DownTraversalContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUpAndDownTraversalExpression"):
                listener.enterUpAndDownTraversalExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUpAndDownTraversalExpression"):
                listener.exitUpAndDownTraversalExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUpAndDownTraversalExpression"):
                return visitor.visitUpAndDownTraversalExpression(self)
            else:
                return visitor.visitChildren(self)

    def expr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AssetSelectionParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                localctx = AssetSelectionParser.TraversalAllowedExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 22
                self.traversalAllowedExpr()
                pass

            elif la_ == 2:
                localctx = AssetSelectionParser.UpAndDownTraversalExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 23
                self.upTraversal()
                self.state = 24
                self.traversalAllowedExpr()
                self.state = 25
                self.downTraversal()
                pass

            elif la_ == 3:
                localctx = AssetSelectionParser.UpTraversalExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.upTraversal()
                self.state = 28
                self.traversalAllowedExpr()
                pass

            elif la_ == 4:
                localctx = AssetSelectionParser.DownTraversalExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 30
                self.traversalAllowedExpr()
                self.state = 31
                self.downTraversal()
                pass

            elif la_ == 5:
                localctx = AssetSelectionParser.NotExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 33
                self.match(AssetSelectionParser.NOT)
                self.state = 34
                self.expr(4)
                pass

            elif la_ == 6:
                localctx = AssetSelectionParser.AllExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 35
                self.match(AssetSelectionParser.STAR)
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 44
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
                    if la_ == 1:
                        localctx = AssetSelectionParser.AndExpressionContext(
                            self, AssetSelectionParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 38
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 39
                        self.match(AssetSelectionParser.AND)
                        self.state = 40
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = AssetSelectionParser.OrExpressionContext(
                            self, AssetSelectionParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 41
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 42
                        self.match(AssetSelectionParser.OR)
                        self.state = 43
                        self.expr(3)
                        pass

                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TraversalAllowedExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_traversalAllowedExpr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class ParenthesizedExpressionContext(TraversalAllowedExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.TraversalAllowedExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(AssetSelectionParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def RPAREN(self):
            return self.getToken(AssetSelectionParser.RPAREN, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParenthesizedExpression"):
                listener.enterParenthesizedExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParenthesizedExpression"):
                listener.exitParenthesizedExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParenthesizedExpression"):
                return visitor.visitParenthesizedExpression(self)
            else:
                return visitor.visitChildren(self)

    class AttributeExpressionContext(TraversalAllowedExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.TraversalAllowedExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attributeExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.AttributeExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAttributeExpression"):
                listener.enterAttributeExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAttributeExpression"):
                listener.exitAttributeExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAttributeExpression"):
                return visitor.visitAttributeExpression(self)
            else:
                return visitor.visitChildren(self)

    class FunctionCallExpressionContext(TraversalAllowedExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.TraversalAllowedExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionName(self):
            return self.getTypedRuleContext(AssetSelectionParser.FunctionNameContext, 0)

        def LPAREN(self):
            return self.getToken(AssetSelectionParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def RPAREN(self):
            return self.getToken(AssetSelectionParser.RPAREN, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionCallExpression"):
                listener.enterFunctionCallExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionCallExpression"):
                listener.exitFunctionCallExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionCallExpression"):
                return visitor.visitFunctionCallExpression(self)
            else:
                return visitor.visitChildren(self)

    def traversalAllowedExpr(self):

        localctx = AssetSelectionParser.TraversalAllowedExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_traversalAllowedExpr)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]:
                localctx = AssetSelectionParser.AttributeExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.attributeExpr()
                pass
            elif token in [25, 26]:
                localctx = AssetSelectionParser.FunctionCallExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.functionName()
                self.state = 51
                self.match(AssetSelectionParser.LPAREN)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(AssetSelectionParser.RPAREN)
                pass
            elif token in [9]:
                localctx = AssetSelectionParser.ParenthesizedExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.match(AssetSelectionParser.LPAREN)
                self.state = 56
                self.expr(0)
                self.state = 57
                self.match(AssetSelectionParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UpTraversalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(AssetSelectionParser.PLUS, 0)

        def DIGITS(self):
            return self.getToken(AssetSelectionParser.DIGITS, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_upTraversal

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUpTraversal"):
                listener.enterUpTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUpTraversal"):
                listener.exitUpTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUpTraversal"):
                return visitor.visitUpTraversal(self)
            else:
                return visitor.visitChildren(self)

    def upTraversal(self):

        localctx = AssetSelectionParser.UpTraversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_upTraversal)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 7:
                self.state = 61
                self.match(AssetSelectionParser.DIGITS)

            self.state = 64
            self.match(AssetSelectionParser.PLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DownTraversalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(AssetSelectionParser.PLUS, 0)

        def DIGITS(self):
            return self.getToken(AssetSelectionParser.DIGITS, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_downTraversal

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDownTraversal"):
                listener.enterDownTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDownTraversal"):
                listener.exitDownTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDownTraversal"):
                return visitor.visitDownTraversal(self)
            else:
                return visitor.visitChildren(self)

    def downTraversal(self):

        localctx = AssetSelectionParser.DownTraversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_downTraversal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(AssetSelectionParser.PLUS)
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.state = 67
                self.match(AssetSelectionParser.DIGITS)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionNameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINKS(self):
            return self.getToken(AssetSelectionParser.SINKS, 0)

        def ROOTS(self):
            return self.getToken(AssetSelectionParser.ROOTS, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_functionName

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionName"):
                listener.enterFunctionName(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionName"):
                listener.exitFunctionName(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionName"):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)

    def functionName(self):

        localctx = AssetSelectionParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionName)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not (_la == 25 or _la == 26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_attributeExpr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class PartitionsAttributeExprContext(AttributeExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.AttributeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PARTITIONS(self):
            return self.getToken(AssetSelectionParser.PARTITIONS, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AssetSelectionParser.ValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPartitionsAttributeExpr"):
                listener.enterPartitionsAttributeExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPartitionsAttributeExpr"):
                listener.exitPartitionsAttributeExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPartitionsAttributeExpr"):
                return visitor.visitPartitionsAttributeExpr(self)
            else:
                return visitor.visitChildren(self)

    class TagAttributeExprContext(AttributeExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.AttributeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAG(self):
            return self.getToken(AssetSelectionParser.TAG, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ValueContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ValueContext, i)

        def EQUAL(self):
            return self.getToken(AssetSelectionParser.EQUAL, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTagAttributeExpr"):
                listener.enterTagAttributeExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTagAttributeExpr"):
                listener.exitTagAttributeExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTagAttributeExpr"):
                return visitor.visitTagAttributeExpr(self)
            else:
                return visitor.visitChildren(self)

    class KeyExprContext(AttributeExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.AttributeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KEY(self):
            return self.getToken(AssetSelectionParser.KEY, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def keyValue(self):
            return self.getTypedRuleContext(AssetSelectionParser.KeyValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKeyExpr"):
                listener.enterKeyExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKeyExpr"):
                listener.exitKeyExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitKeyExpr"):
                return visitor.visitKeyExpr(self)
            else:
                return visitor.visitChildren(self)

    class ColumnAttributeExprContext(AttributeExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.AttributeExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
